data/derived/comb/progs/unify/prog3599.ml.out
Characters 103-104:
  | _ -> b;;
         ^
Error: This expression has type bool but an expression was expected of type
         int
